// CineVerse ER Diagram — paste into https://dbdiagram.io/d
// ISE 503 Data Management - Spring 2026

// ─── CORE ───

Table Movie {
  movie_id int [pk, increment]
  imdb_id varchar(20) [unique, not null]
  tmdb_id int
  title varchar(255) [not null]
  release_year int
  runtime_minutes int
  language varchar(50)
  country varchar(100)
  plot text
  budget numeric
  revenue numeric
  imdb_rating numeric
  imdb_votes int
}

Table Person {
  person_id int [pk, increment]
  imdb_person_id varchar(20) [unique]
  name varchar(255) [not null]
  birth_year int
  death_year int
  primary_profession varchar(100)
}

Table RoleType {
  role_type_id int [pk, increment]
  role_name varchar(50) [unique, not null, note: 'Actor, Director, Producer, Writer']
}

Table MovieCredit {
  credit_id int [pk, increment]
  movie_id int [not null, ref: > Movie.movie_id]
  person_id int [not null, ref: > Person.person_id]
  role_type_id int [not null, ref: > RoleType.role_type_id]
  character_name varchar(255)
  billing_order int
}

Table Genre {
  genre_id int [pk, increment]
  genre_name varchar(50) [unique, not null]
}

Table MovieGenre {
  movie_id int [ref: > Movie.movie_id]
  genre_id int [ref: > Genre.genre_id]

  indexes {
    (movie_id, genre_id) [pk]
  }
}

Table Distributor {
  distributor_id int [pk, increment]
  name varchar(255) [not null]
  address text
  country varchar(100)
}

Table MovieDistributor {
  movie_id int [ref: > Movie.movie_id]
  distributor_id int [ref: > Distributor.distributor_id]
  region varchar(100)

  indexes {
    (movie_id, distributor_id, region) [pk]
  }
}

// ─── USERS & RATINGS ───

Table UserProfile {
  user_id int [pk, increment]
  username varchar(100) [unique, not null]
  email varchar(255) [unique]
  age_group varchar(20) [note: 'under_18, 18-24, 25-34, 35-44, 45-54, 55+']
  preferred_language varchar(50)
}

Table UserRating {
  user_id int [ref: > UserProfile.user_id]
  movie_id int [ref: > Movie.movie_id]
  rating numeric [not null, note: '0.0 to 10.0']
  rating_date date

  indexes {
    (user_id, movie_id) [pk]
  }
}

Table Review {
  review_id int [pk, increment]
  user_id int [ref: > UserProfile.user_id]
  movie_id int [ref: > Movie.movie_id]
  review_text text [not null]
  sentiment varchar(20) [note: 'positive, negative, neutral, mixed']
  review_date date
}

Table ExternalRating {
  movie_id int [ref: > Movie.movie_id]
  source_name varchar(100) [not null, note: 'IMDb, Rotten Tomatoes, etc.']
  score numeric [not null]
  max_score numeric [not null]
  vote_count int

  indexes {
    (movie_id, source_name) [pk]
  }
}

// ─── RECOMMENDATIONS & MOOD ───

Table Tag {
  tag_id int [pk, increment]
  tag_name varchar(100) [unique, not null, note: 'dark, funny, mind-bending, etc.']
}

Table MovieTagRelevance {
  movie_id int [ref: > Movie.movie_id]
  tag_id int [ref: > Tag.tag_id]
  relevance_score numeric [not null, note: '0.0 to 1.0']

  indexes {
    (movie_id, tag_id) [pk]
  }
}

Table UserPreferenceTag {
  user_id int [ref: > UserProfile.user_id]
  tag_id int [ref: > Tag.tag_id]
  preference_weight numeric [not null]

  indexes {
    (user_id, tag_id) [pk]
  }
}

Table RecommendationLog {
  recommendation_id int [pk, increment]
  user_id int [ref: > UserProfile.user_id]
  movie_id int [ref: > Movie.movie_id]
  score numeric [not null]
  explanation text [not null]
  generated_at timestamp
}

// ─── STREAMING ───

Table StreamingPlatform {
  platform_id int [pk, increment]
  name varchar(100) [not null]
  country varchar(100)
  website_url text
}

Table MovieAvailability {
  movie_id int [ref: > Movie.movie_id]
  platform_id int [ref: > StreamingPlatform.platform_id]
  region varchar(50) [not null]
  access_type varchar(20) [not null, note: 'subscription, rent, buy, free, theater']
  start_date date
  end_date date

  indexes {
    (movie_id, platform_id, region, access_type) [pk]
  }
}

// ─── AWARDS ───

Table Award {
  award_id int [pk, increment]
  award_name varchar(255) [not null]
  category varchar(255) [not null]
}

Table MovieAward {
  movie_award_id int [pk, increment]
  movie_id int [ref: > Movie.movie_id]
  award_id int [ref: > Award.award_id]
  person_id int [ref: > Person.person_id]
  award_year int [not null]
  result varchar(20) [not null, note: 'won or nominated']
}

// ─── PRODUCTION ───

Table ProductionCompany {
  company_id int [pk, increment]
  name varchar(255) [not null]
  country varchar(100)
  founded_year int
}

Table MovieProductionCompany {
  movie_id int [ref: > Movie.movie_id]
  company_id int [ref: > ProductionCompany.company_id]

  indexes {
    (movie_id, company_id) [pk]
  }
}

// ─── WATCHLIST ───

Table Watchlist {
  watchlist_id int [pk, increment]
  user_id int [ref: > UserProfile.user_id]
  name varchar(100) [not null]
}

Table WatchlistItem {
  watchlist_id int [ref: > Watchlist.watchlist_id]
  movie_id int [ref: > Movie.movie_id]
  added_at timestamp
  watched_status varchar(20) [note: 'unwatched, watching, watched']

  indexes {
    (watchlist_id, movie_id) [pk]
  }
}

// ─── GROUP WATCH ───

Table WatchParty {
  party_id int [pk, increment]
  host_user_id int [ref: > UserProfile.user_id]
  party_name varchar(255) [not null]
  planned_date date
}

Table WatchPartyMember {
  party_id int [ref: > WatchParty.party_id]
  user_id int [ref: > UserProfile.user_id]

  indexes {
    (party_id, user_id) [pk]
  }
}

Table WatchPartySuggestion {
  party_id int [ref: > WatchParty.party_id]
  movie_id int [ref: > Movie.movie_id]
  group_score numeric
  suggested_by int [ref: > UserProfile.user_id]

  indexes {
    (party_id, movie_id) [pk]
  }
}
